@@ -1,3 +1,9 @@
+2023-12-18T04:08:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7243489206 # 4368
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-18
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2933 / 0 2935 / +0 +2
+
 2023-12-18T00:32:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7242033618 # 4367
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-18
